--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p>
                     I build things at a big blue tech company. Working in microservice and DevOps development.
                 </p>
-                <a class='letsTalk' href="mailto:a@ashertparker.com">Let's Talk</a>
+                <a class='letsTalk' href="mailto:asher.parker@outlook.com">Let's Talk</a>
                 <div class='skills' id='skills' role='presentation'>
                     <img class='icons' src="./resources/Icons/javascript.svg" alt="JavaScript Icon" title='JavaScript'>
                     <img class='icons' src="./resources/Icons/java.svg" alt="Java Icon" title='Java'>
