--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a class='sectionLinks' href='https://github.com/asher-t-parker'>github</a>
                 <span class='navDivider'>|</span>
                 <a class='sectionLinks' href='https://www.linkedin.com/in/asher-t-parker'>linkedin</a>
-                <a class='resumeButton' href="resources/atpresume.pdf">RÉSUMÉ</a>
+                <a class='resumeButton' href="resources/asherParkerResume.pdf">RÉSUMÉ</a>
             </nav>
         </header>
         
@@ -58,14 +58,13 @@
                 </p>
                 <a class='letsTalk' href="mailto:asher.parker@outlook.com">Let's Talk</a>
                 <div class='skills' id='skills' role='presentation'>
-                    <img class='icons' src="./resources/Icons/javascript.svg" alt="JavaScript Icon" title='JavaScript'>
+                    <img class='icons' src="./resources/Icons/golang-2.svg" alt="Golang Icon" title='Golang'>
+                    <img class='icons' src="./resources/Icons/terraform.svg" alt="Terraform Icon" title='Terraform'>
                     <img class='icons' src="./resources/Icons/java.svg" alt="Java Icon" title='Java'>
-                    <img class='icons' src="./resources/Icons/html.svg" alt="HTML 5 Icon" title='HTML 5'>
-                    <img class='icons' src="./resources/Icons/css3.svg" alt="CSS 3 Icon" title='CSS 3'>
+                    <img class='icons' src="./resources/Icons/python.svg" alt="Python Icon" title='Python'>
                     <img class='icons' src="./resources/Icons/github.svg" alt="Github Icon" title='Git/Github'>
-                    <img class='icons' src="./resources/Icons/npm.svg" alt="NPM Icon" title='NPM'>
-                    <img class='icons' src="./resources/Icons/icons8-nodejs.svg" alt="Node.js Icon" title='Node.js'>
-                    <img class='icons' src="./resources/Icons/terminal.svg" alt="Bash/CLI Icon" title="Bash/CLI">
+                    <img class='icons' src="./resources/Icons/docker.svg" alt="Docker Icon" title='Docker'>
+                    <img class='icons' src="./resources/Icons/postgres.svg" alt="Postgres Icon" title='Postgres'>
                     <img class='icons' src="./resources/Icons/icons8-react.svg" alt="React Icon" title="React">
                 </div>
             </div>
