Update email and title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!--Designed and built w/💖 by Asher T. Parker-->
-        <title>Asher T. Parker | Full-Stack Engineer</title>
+        <title>Asher T. Parker | Software & DevOps Engineer</title>
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Ubuntu+Mono:wght@400;700&family=Varela&display=swap" rel="stylesheet"> 
@@ -21,7 +21,7 @@
                 <span class='navDivider'>|</span>
                 <a class='sectionLinks' href="#skills">skills</a>
                 <span class='navDivider'>|</span>
-                <a class='sectionLinks' href="mailto:a@ashertparker.com">contact</a>
+                <a class='sectionLinks' href="mailto:asher.parker@outlook.com">contact</a>
                 <span class='navDivider'>|</span>
                 <a class='sectionLinks' href='https://github.com/asher-t-parker'>github</a>
                 <span class='navDivider'>|</span>
@@ -50,7 +50,7 @@
                                 <span>c</span><span>r</span><span>e</span><span>a</span><span>t</span><span>i</span><span>v</span><span>e</span><span>&nbsp;</span>
                             </div>
                         </div>
-                        <span class='fullStack'>full-stack engineer.</span>
+                        <span class='se'>software engineer.</span>
                     </div>
                 </h1>
                 <p>
