--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
                 </p>
                 <a class='letsTalk' href="mailto:asher.parker@outlook.com">Let's Talk</a>
                 <div class='skills' id='skills' role='presentation'>
-                    <img class='icons' src="./resources/Icons/golang-2.svg" alt="Golang Icon" title='Golang'>
+                    <img class='icons' src="./resources/Icons/golang.svg" alt="Golang Icon" title='Golang'>
                     <img class='icons' src="./resources/Icons/terraform.svg" alt="Terraform Icon" title='Terraform'>
+                    <img class='icons' src="./resources/Icons/jenkins.svg" alt="Jenkins Icon" title="Jenkins">
+                    <img class='icons' src="./resources/Icons/kubernetes.svg" alt="Kubernetes Icon" title='Kubernetes'>
+                    <img class='icons' src="./resources/Icons/docker.svg" alt="Docker Icon" title='Docker'>
                     <img class='icons' src="./resources/Icons/java.svg" alt="Java Icon" title='Java'>
                     <img class='icons' src="./resources/Icons/python.svg" alt="Python Icon" title='Python'>
-                    <img class='icons' src="./resources/Icons/github.svg" alt="Github Icon" title='Git/Github'>
-                    <img class='icons' src="./resources/Icons/docker.svg" alt="Docker Icon" title='Docker'>
                     <img class='icons' src="./resources/Icons/postgres.svg" alt="Postgres Icon" title='Postgres'>
-                    <img class='icons' src="./resources/Icons/icons8-react.svg" alt="React Icon" title="React">
                 </div>
             </div>
             <div class='gitDiv' role="presentation">
